[gd_scene load_steps=5 format=3 uid="uid://cdhcx26w7e5kc"]

[ext_resource type="Script" path="res://ui menu/settings.gd" id="1_yeafh"]
[ext_resource type="Script" path="res://ui menu/ui_cursor.gd" id="2_ft7cp"]
[ext_resource type="Texture2D" uid="uid://oqsat32k5pyj" path="res://ui menu/cursor_bottle.png" id="3_f38gg"]
[ext_resource type="Texture2D" uid="uid://bs0imicl4f530" path="res://ui menu/cursor_liquid.png" id="4_5e6ly"]

[node name="settings" type="Node2D"]
script = ExtResource("1_yeafh")

[node name="ui_cursor" type="Node" parent="." node_paths=PackedStringArray("cursor", "line", "first_focus")]
script = ExtResource("2_ft7cp")
cursor = NodePath("../cursor")
line = NodePath("../Line2D")
first_focus = NodePath("../fullscreen")

[node name="cursor" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(32, 32)
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(5, 5)
pivot_offset = Vector2(19.84, 25.416)
max_value = 30.0
value = 30.0
fill_mode = 3
texture_over = ExtResource("3_f38gg")
texture_progress = ExtResource("4_5e6ly")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)

[node name="fullscreen" type="Button" parent="." groups=["ui_button"]]
offset_left = 1209.0
offset_top = 122.0
offset_right = 1463.0
offset_bottom = 199.0
theme_override_font_sizes/font_size = 50
text = "Fullscreen"

[node name="camera_distance" type="Label" parent="." groups=["ui_button"]]
offset_left = 1209.0
offset_top = 245.0
offset_right = 1613.0
offset_bottom = 314.0
theme_override_font_sizes/font_size = 50
text = "Camera distance"

[node name="camera_distance_bar" type="HSlider" parent="." groups=["ui_button"]]
custom_minimum_size = Vector2(200, 100)
offset_left = 1222.0
offset_top = 343.0
offset_right = 1422.0
offset_bottom = 363.0
max_value = 30.0
value = 10.0

[node name="camera_sensitivity" type="Label" parent="." groups=["ui_button"]]
offset_left = 1209.0
offset_top = 453.0
offset_right = 1657.0
offset_bottom = 522.0
theme_override_font_sizes/font_size = 50
text = "Camera Sensitivity"

[node name="camera_sensitivity_bar" type="HSlider" parent="." groups=["ui_button"]]
custom_minimum_size = Vector2(200, 100)
offset_left = 1222.0
offset_top = 551.0
offset_right = 1422.0
offset_bottom = 651.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.3

[node name="player_visibility" type="Label" parent="." groups=["ui_button"]]
offset_left = 1209.0
offset_top = 669.0
offset_right = 1657.0
offset_bottom = 738.0
theme_override_font_sizes/font_size = 50
text = "Player Visibility"

[node name="player_visibility_bar" type="HSlider" parent="." groups=["ui_button"]]
custom_minimum_size = Vector2(200, 100)
offset_left = 1222.0
offset_top = 767.0
offset_right = 1422.0
offset_bottom = 867.0
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.8

[node name="reset" type="Button" parent="." groups=["ui_button"]]
offset_left = 1212.0
offset_top = 876.0
offset_right = 1526.0
offset_bottom = 953.0
theme_override_font_sizes/font_size = 50
text = "Reset Values"

[node name="back" type="Button" parent="." groups=["ui_button"]]
offset_left = 284.0
offset_top = 695.0
offset_right = 407.0
offset_bottom = 772.0
theme_override_font_sizes/font_size = 50
text = "Back"
metadata/scene = "ui menu/title"

[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="value_changed" from="camera_distance_bar" to="." method="_on_camera_distance_bar_value_changed"]
[connection signal="value_changed" from="camera_sensitivity_bar" to="." method="_on_camera_sensitivity_bar_value_changed"]
[connection signal="value_changed" from="player_visibility_bar" to="." method="_on_player_visibility_bar_value_changed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
